# privacyscribe

./: CLAUDE.md  package-lock.json  package.json
locales/: ar.json  en.json  fr.json
src/: App.test.tsx  CLAUDE.md
src-tauri/: CLAUDE.md  Cargo.toml  Info.plist  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/src/: bindings.rs  lib.rs
src-tauri/src/commands/: audio.rs  llm.rs  mod.rs  transcription.rs
src/components/layout/: MainWindow.tsx  MainWindowContent.tsx
src/components/notes/: AudioRecorder.tsx  NoteAssistant.tsx  NoteEditor.tsx  NotesSidebar.tsx
src/components/preferences/: PreferencesDialog.tsx
src/components/preferences/panes/: TemplatesPane.tsx  TranscriptionPane.tsx
src/components/ui/: tabs.tsx
src/lib/: bindings.ts  db.ts  llm-prompt.ts  llm-service.ts  menu.ts  tauri-bindings.ts  whisper-languages.ts
src/store/: notes-store.ts  templates-store.ts
src/types/: llm.ts  templates.ts
